--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=ec2-54-211-207-129.compute-1.amazonaws.com
 DB_PORT=5432
 DB_DATABASE=smartchef_dev
 DB_USERNAME=dba
-DB_PASSWORD=dba123*
+DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
